# moeve

./: .gitignore  Cargo.toml
src/: main.rs  score.rs  sentence.rs
src/datastores/: datastore.rs  mod.rs
src/datastores/sqlite/: mod.rs
src/datastores/sqlite/sql/: create_tables.rs  get_sentences.rs  insert_sentence.rs  mod.rs  update_sentence.rs
